prosjekt-2/src/pages/css/viewInfo.module.css
.viewInfo {
    background-color: #ececec;
    background: repeating-linear-gradient(45deg, #d4d3d371, #eee9e95e 4px, #d4d2d263 4px, #fafafa 25px);
    position: relative;
    display: grid;
    grid-template-columns: repeat(2, calc(50% - 1.5rem));
    /* grid-template-columns: repeat(2, 1fr); */
    grid-template-rows: auto 1fr;
    grid-column-gap: 1rem;
    grid-row-gap: 0px;
    width: 100%;
    padding: 10px;
    margin: 0 auto;
    align-items: center;    
}
.info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
.info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
.info3 { grid-area: 2 / 2 / 3 / 3; } /* Graph */

.columnMembers {
    flex: 2;
    padding:20px;
}

.columnCommits {
    flex: 3;
    padding:20px;
    min-width: 400px;
}
th{
    border-bottom: 0.5pt solid black;
}
tr:nth-child(even) {
    background-color:#fc6e2752;
    border-bottom: 1px solid;
}
tr:nth-child(odd) {
    background-color:#fca32654;
    border-bottom: 1px solid;
}
td:first-child{
    background-color: #8c929d8c;
}

td{
    padding: 10px;
}

tr:nth-child(even){
    background-color: antiquewhite;
}
th{
    border-bottom: 0.5pt solid black
}
table, th, td {
    /* border: 1px solid rgb(107, 107, 107); */
    text-align: center;
    font-family: "Palatino", "URW Palladio L", serif;
}
table{
    border-collapse: collapse;
    width: 100%;
    padding: 10px;
    border-bottom: 0.5pt solid black;
}
img {
    border-radius: 6.5px;
    width: 35px;
}

.memberliste{
    font-weight: bold;
    font-size: 25px;
    font-family: "Palatino", "URW Palladio L", serif;
}

.graph{
    font-weight: bold;
    font-size: 25px;
    font-family: "Palatino", "URW Palladio L", serif;
}

form{
    width:100%
}

/* CSS */
select {
  border-radius: 8px;
  border-width: 0;
  color: #272323;
  cursor: pointer;
  display: inline-block;
  font-family: "Times New Roman", Times, serif;  font-size: 14px;
  font-weight: 500;
  line-height: 5px;
  list-style: none;
  margin: 0;
  padding: 5px 12px;
  text-align: center;
  transition: all 200ms;
  vertical-align: baseline;
  white-space: nowrap;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  background-color:#fc6e2752;
}

